Building Apps in ASP.Net MVC4 - Finished Intro module. Builds and deploys.

--- a/CHSAuction/Views/Home/About.cshtml
+++ b/CHSAuction/Views/Home/About.cshtml
@@ -1,7 +1,19 @@
 ﻿@{
-    ViewBag.Title = "About";
+    ViewBag.Title = "About CHS Auction";
 }
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
+<article>
+    <p>
+        This auction is to benefit the Colchester High School Project Graduation.
+    </p>
 
+    <p>
+        We do not store any payment method on this site. Once the auction is over, the coordinator will contact you to arrange payment and pickup.
+    </p>
+
+    <p>
+
+    </p>
+</article>
